--- a/bench/settings/settings.json
+++ b/bench/settings/settings.json
@@ -88,25 +88,7 @@
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS"
-          },
-          {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
-          },
-          {
-            "name": "CNA_Q"
-          },
-          {
-            "name": "CNA_QSPIN"
-          },
-          {
-            "name": "HMCS_Q"
-          },
-          {
-            "name": "HMCS_QSPIN"
+            "name": "VNA_2_Q"
           }
         ]
       }
@@ -125,25 +107,7 @@
         "skip": false,
         "locks": [
           {
-            "name": "NUMA_MCS"
-          },
-          {
-            "name": "UNFAIR_REENTRANT"
-          },
-          {
-            "name": "FAIR_REENTRANT"
-          },
-          {
-            "name": "CNA_Q"
-          },
-          {
-            "name": "CNA_QSPIN"
-          },
-          {
-            "name": "HMCS_Q"
-          },
-          {
-            "name": "HMCS_QSPIN"
+            "name": "VNA_2_Q"
           }
         ]
       }
