--- a/vthreads-numa-locks/gradle.properties
+++ b/vthreads-numa-locks/gradle.properties
@@ -1,3 +1,3 @@
-signing.keyId=[TODO WRITE LAST 8 CHARACTERS OF PUB GPG KEY]
-signing.password=[TODO WRITE PASSWORD OF SIGNING]
-signing.secretKeyRingFile=[TODO /Users/me/.gnupg/secring.gpg]
+signing.keyId=93CC548A
+signing.password=KartoshkA2001
+signing.secretKeyRingFile=/Users/ricnorr/.gnupg/secring.gpg
